project reorganization
 - extracted maven modules
  -- exe - builds exe file from jar
  -- uploader - creates uploader that uploads file to google drive
     (uses Java API)